Source/KNSoft.ZPigeon.Server.Native/Bridge.h



typedef
VOID
(NTAPI *ZP_NATIVE_STATUS_CALLBACK)(
    _In_ ZP_STATUS Status,
    _In_opt_ PVOID Context);


typedef
VOID
(NTAPI *ZP_NATIVE_STRING_CALLBACK)(
    _In_ ZP_STATUS Status,
    _In_reads_opt_(ValueLength) PCWCH Value,
    _In_ ULONG ValueLength,
    _In_opt_ PVOID Context);


typedef
VOID
(NTAPI *ZP_NATIVE_SECURITY_DESCRIPTOR_CALLBACK)(
    _In_ ZP_STATUS Status,
    _In_reads_opt_(SddlLength) PCWCH Sddl,
    _In_ ULONG SddlLength,
    _In_ BOOLEAN DaclProtected,
    _In_opt_ PVOID Context);


typedef
VOID
(NTAPI *ZP_NATIVE_FILE_PAGE_CALLBACK)(
    _In_ ZP_STATUS Status,
    _In_ ULONG EnumerationId,
    _In_reads_opt_(RecordCount) PCZP_NATIVE_FILE_RECORD Records,
    _In_ ULONG RecordCount,
    _In_opt_ PVOID Context);


typedef
VOID
(NTAPI *ZP_NATIVE_FILE_INFO_CALLBACK)(
    _In_ ZP_STATUS Status,
    _In_ ULONG Attributes,
    _In_ ULONGLONG Size,
    _In_ ULONGLONG CreationTime,
    _In_ ULONGLONG LastAccessTime,
    _In_ ULONGLONG LastWriteTime,
    _In_opt_ PVOID Context);


typedef
VOID
(NTAPI *ZP_NATIVE_FILE_HASH_CALLBACK)(
    _In_ ZP_STATUS Status,
    _In_ ULONGLONG FileSize,
    _In_reads_bytes_opt_(DigestLength) const VOID* Digest,
    _In_ ULONG DigestLength,
    _In_opt_ PVOID Context);


typedef
VOID
(NTAPI *ZP_NATIVE_FILE_PREVIEW_CALLBACK)(
    _In_ ZP_STATUS Status,
    _In_reads_bytes_opt_(DataLength) const VOID* Data,
    _In_ ULONG DataLength,
    _In_opt_ PVOID Context);


typedef
VOID
(NTAPI *ZP_NATIVE_FILE_OWNERS_CALLBACK)(
    _In_ ZP_STATUS Status,
    _In_reads_opt_(RecordCount) PCZP_NATIVE_FILE_OWNER_RECORD Records,
    _In_ ULONG RecordCount,
    _In_opt_ PVOID Context);


typedef
VOID
(NTAPI *ZP_NATIVE_FILE_OWNER_CONTROL_CALLBACK)(
    _In_ ZP_STATUS Status,
    _In_reads_opt_(ResultCount) PCZP_FILE_OWNER_CONTROL_RESULT Results,
    _In_ ULONG ResultCount,
    _In_opt_ PVOID Context);


typedef
VOID
(NTAPI *ZP_NATIVE_FILE_VOLUME_CALLBACK)(
    _In_ ZP_STATUS Status,
    _In_ ULONGLONG TotalBytes,
    _In_ ULONGLONG FreeBytes,
    _In_ ULONG SerialNumber,
    _In_ ULONG MaximumComponentLength,
    _In_ ULONG FileSystemFlags,
    _In_reads_opt_(LabelLength) PCWCH Label,
    _In_ ULONG LabelLength,
    _In_reads_opt_(FileSystemLength) PCWCH FileSystem,
    _In_ ULONG FileSystemLength,
    _In_opt_ PVOID Context);


__declspec(dllexport)
NTSTATUS
NTAPI
ZpNative_EnumerateFilesPage(
    _In_ ULONGLONG ClientId,
    _In_reads_opt_(PathLength) PCWCH Path,
    _In_ ULONG PathLength,
    _In_ ULONG EnumerationId,
    _In_ ZP_NATIVE_FILE_PAGE_CALLBACK Callback,
    _In_opt_ PVOID Context);


__declspec(dllexport)
NTSTATUS
NTAPI
ZpNative_EnumerateFilteredFilesPage(
    _In_ ULONGLONG ClientId,
    _In_reads_opt_(PathLength) PCWCH Path,
    _In_ ULONG PathLength,
    _In_reads_opt_(FilterLength) PCWCH Filter,
    _In_ ULONG FilterLength,
    _In_ WCHAR Group,
    _In_ ULONG EnumerationId,
    _In_ ZP_NATIVE_FILE_PAGE_CALLBACK Callback,
    _In_opt_ PVOID Context);


__declspec(dllexport)
NTSTATUS
NTAPI
ZpNative_CloseFileEnumeration(
    _In_ ULONGLONG ClientId,
    _In_ ULONG EnumerationId,
    _In_ ZP_NATIVE_STATUS_CALLBACK Callback,
    _In_opt_ PVOID Context);


__declspec(dllexport)
NTSTATUS
NTAPI
ZpNative_EnumerateArchivePage(
    _In_ ULONGLONG ClientId,
    _In_reads_opt_(PathLength) PCWCH Path,
    _In_ ULONG PathLength,
    _In_ ULONG EnumerationId,
    _In_ ZP_NATIVE_FILE_PAGE_CALLBACK Callback,
    _In_opt_ PVOID Context);


__declspec(dllexport)
NTSTATUS
NTAPI
ZpNative_QueryShortcut(
    _In_ ULONGLONG ClientId,
    _In_reads_(PathLength) PCWCH Path,
    _In_ ULONG PathLength,
    _In_ ZP_NATIVE_STRING_CALLBACK Callback,
    _In_opt_ PVOID Context);


__declspec(dllexport)
NTSTATUS
NTAPI
ZpNative_PreviewImage(
    _In_ ULONGLONG ClientId,
    _In_reads_(PathLength) PCWCH Path,
    _In_ ULONG PathLength,
    _In_ ZP_FILE_IMAGE_PREVIEW_QUALITY Quality,
    _In_ ZP_NATIVE_FILE_PREVIEW_CALLBACK Callback,
    _In_opt_ PVOID Context);


__declspec(dllexport)
NTSTATUS
NTAPI
ZpNative_QueryFile(
    _In_ ULONGLONG ClientId,
    _In_reads_(PathLength) PCWCH Path,
    _In_ ULONG PathLength,
    _In_ ZP_NATIVE_FILE_INFO_CALLBACK Callback,
    _In_opt_ PVOID Context);


__declspec(dllexport)
NTSTATUS
NTAPI
ZpNative_QueryFileSecurity(
    _In_ ULONGLONG ClientId,
    _In_reads_(PathLength) PCWCH Path,
    _In_ ULONG PathLength,
    _In_ ZP_NATIVE_SECURITY_DESCRIPTOR_CALLBACK Callback,
    _In_opt_ PVOID Context);


__declspec(dllexport)
NTSTATUS
NTAPI
ZpNative_SetFileSecurity(
    _In_ ULONGLONG ClientId,
    _In_reads_(PathLength) PCWCH Path,
    _In_ ULONG PathLength,
    _In_reads_(SddlLength) PCWCH Sddl,
    _In_ ULONG SddlLength,
    _In_ BOOLEAN DaclProtected,
    _In_ ZP_NATIVE_STATUS_CALLBACK Callback,
    _In_opt_ PVOID Context);


__declspec(dllexport)
NTSTATUS
NTAPI
ZpNative_ResolveAccountName(
    _In_ ULONGLONG ClientId,
    _In_reads_(NameLength) PCWCH Name,
    _In_ ULONG NameLength,
    _In_ ZP_NATIVE_STRING_CALLBACK Callback,
    _In_opt_ PVOID Context);


__declspec(dllexport)
NTSTATUS
NTAPI
ZpNative_ResolveAccountSid(
    _In_ ULONGLONG ClientId,
    _In_reads_(SidLength) PCWCH Sid,
    _In_ ULONG SidLength,
    _In_ ZP_NATIVE_STRING_CALLBACK Callback,
    _In_opt_ PVOID Context);


__declspec(dllexport)
NTSTATUS
NTAPI
ZpNative_HashFile(
    _In_ ULONGLONG ClientId,
    _In_reads_(PathLength) PCWCH Path,
    _In_ ULONG PathLength,
    _In_ ZP_FILE_HASH_ALGORITHM Algorithm,
    _In_ ZP_NATIVE_FILE_HASH_CALLBACK Callback,
    _In_opt_ PVOID Context);


__declspec(dllexport)
NTSTATUS
NTAPI
ZpNative_DeleteFile(
    _In_ ULONGLONG ClientId,
    _In_reads_(PathLength) PCWCH Path,
    _In_ ULONG PathLength,
    _In_ ZP_NATIVE_STATUS_CALLBACK Callback,
    _In_opt_ PVOID Context);


__declspec(dllexport)
NTSTATUS
NTAPI
ZpNative_RenameFile(
    _In_ ULONGLONG ClientId,
    _In_reads_(PathLength) PCWCH Path,
    _In_ ULONG PathLength,
    _In_reads_(NewPathLength) PCWCH NewPath,
    _In_ ULONG NewPathLength,
    _In_ ZP_NATIVE_STATUS_CALLBACK Callback,
    _In_opt_ PVOID Context);


__declspec(dllexport)
NTSTATUS
NTAPI
ZpNative_SetFileAttributes(
    _In_ ULONGLONG ClientId,
    _In_reads_(PathLength) PCWCH Path,
    _In_ ULONG PathLength,
    _In_ ULONG Attributes,
    _In_ ZP_NATIVE_STATUS_CALLBACK Callback,
    _In_opt_ PVOID Context);


__declspec(dllexport)
NTSTATUS
NTAPI
ZpNative_QueryFileOwners(
    _In_ ULONGLONG ClientId,
    _In_reads_(PathLength) PCWCH Path,
    _In_ ULONG PathLength,
    _In_ ZP_NATIVE_FILE_OWNERS_CALLBACK Callback,
    _In_opt_ PVOID Context);


__declspec(dllexport)
NTSTATUS
NTAPI
ZpNative_ControlFileOwners(
    _In_ ULONGLONG ClientId,
    _In_reads_(PathLength) PCWCH Path,
    _In_ ULONG PathLength,
    _In_ ZP_FILE_OWNER_CONTROL Control,
    _In_reads_(ProcessCount) const ULONG* ProcessIds,
    _In_ ULONG ProcessCount,
    _In_ ZP_NATIVE_FILE_OWNER_CONTROL_CALLBACK Callback,
    _In_opt_ PVOID Context);


__declspec(dllexport)
NTSTATUS
NTAPI
ZpNative_QueryFileVolume(
    _In_ ULONGLONG ClientId,
    _In_reads_(PathLength) PCWCH Path,
    _In_ ULONG PathLength,
    _In_ ZP_NATIVE_FILE_VOLUME_CALLBACK Callback,
    _In_opt_ PVOID Context);


__declspec(dllexport)
NTSTATUS
NTAPI
ZpNative_SetFileVolumeLabel(
    _In_ ULONGLONG ClientId,
    _In_reads_(PathLength) PCWCH Path,
    _In_ ULONG PathLength,
    _In_reads_(LabelLength) PCWCH Label,
    _In_ ULONG LabelLength,
    _In_ ZP_NATIVE_STATUS_CALLBACK Callback,
    _In_opt_ PVOID Context);