Source/KNSoft.ZPigeon.Server.Managed/Management.NativeMethods.cs


    [StructLayout(LayoutKind.Sequential)]
    internal readonly struct WindowRecord
    {
        internal readonly ulong Handle;
        internal readonly ulong ParentHandle;
        internal readonly uint ProcessId;
        internal readonly uint ThreadId;
        internal readonly uint Style;
        internal readonly uint ExStyle;
        internal readonly uint Flags;
        internal readonly nint Caption;
        internal readonly uint CaptionLength;
        internal readonly nint ClassName;
        internal readonly uint ClassNameLength;
    }

    [StructLayout(LayoutKind.Sequential)]
    internal readonly struct WindowMonitor
    {
        internal readonly uint Index;
        internal readonly uint Flags;
        internal readonly int Left;
        internal readonly int Top;
        internal readonly int Right;
        internal readonly int Bottom;
        internal readonly int WorkLeft;
        internal readonly int WorkTop;
        internal readonly int WorkRight;
        internal readonly int WorkBottom;
        internal readonly nint Device;
        internal readonly uint DeviceLength;
    }

    [StructLayout(LayoutKind.Sequential)]
    internal readonly struct WindowInfo
    {
        internal readonly ulong Handle;
        internal readonly ulong ParentHandle;
        internal readonly uint ProcessId;
        internal readonly uint ThreadId;
        internal readonly uint Style;
        internal readonly uint ExStyle;
        internal readonly uint Flags;
        internal readonly StringView Caption;
        internal readonly StringView ClassName;
        internal readonly ulong OwnerHandle;
        internal readonly int WindowLeft;
        internal readonly int WindowTop;
        internal readonly int WindowRight;
        internal readonly int WindowBottom;
        internal readonly int ClientLeft;
        internal readonly int ClientTop;
        internal readonly int ClientRight;
        internal readonly int ClientBottom;
        internal readonly uint WindowStatus;
        internal readonly uint BorderWidth;
        internal readonly uint BorderHeight;
        internal readonly ushort ClassAtom;
        internal readonly ushort CreatorVersion;
        internal readonly ulong PreviousHandle;
        internal readonly ulong NextHandle;
        internal readonly ulong FirstChildHandle;
        internal readonly ulong FirstSiblingHandle;
        internal readonly ulong LastSiblingHandle;
        internal readonly int MonitorLeft;
        internal readonly int MonitorTop;
        internal readonly int MonitorRight;
        internal readonly int MonitorBottom;
        internal readonly StringView MonitorDevice;
    }

    [StructLayout(LayoutKind.Sequential)]
    internal readonly struct ServiceRecord
    {
        internal readonly uint ServiceType;
        internal readonly uint CurrentState;
        internal readonly uint ControlsAccepted;
        internal readonly uint ProcessId;
        internal readonly uint StartType;
        internal readonly nint ServiceName;
        internal readonly uint ServiceNameLength;
        internal readonly nint DisplayName;
        internal readonly uint DisplayNameLength;
        internal readonly nint Description;
        internal readonly uint DescriptionLength;
        internal readonly nint StartName;
        internal readonly uint StartNameLength;
    }

    [StructLayout(LayoutKind.Sequential)]
    internal readonly struct ServiceInfo
    {
        internal readonly uint ServiceType;
        internal readonly uint CurrentState;
        internal readonly uint ControlsAccepted;
        internal readonly uint ProcessId;
        internal readonly uint StartType;
        internal readonly uint ErrorControl;
        internal readonly uint DelayedAutoStart;
        internal readonly uint ServiceFlags;
        internal readonly uint RecoverySupported;
        internal readonly uint FailureActionsOnNonCrashFailures;
        internal readonly uint RecoveryActionCount;
        internal readonly uint ResetPeriodSeconds;
        internal readonly uint RestartDelayMilliseconds;
        internal readonly uint RebootDelayMilliseconds;
        internal readonly uint FirstFailureAction;
        internal readonly uint SecondFailureAction;
        internal readonly uint ThirdFailureAction;
        internal readonly uint SubsequentFailureAction;
        internal readonly StringView ServiceName;
        internal readonly StringView DisplayName;
        internal readonly StringView Description;
        internal readonly StringView BinaryPathName;
        internal readonly StringView StartName;
        internal readonly StringView LoadOrderGroup;
        internal readonly StringView Dependencies;
        internal readonly StringView Dependents;
        internal readonly StringView ServiceDll;
        internal readonly StringView RebootMessage;
        internal readonly StringView RecoveryCommand;
    }

    [LibraryImport(Library,
        EntryPoint = "ZpNative_EnumerateFilesPage",
        StringMarshalling = StringMarshalling.Utf16)]
    internal static partial int EnumerateFilesPage(
        ulong clientId,
        string? path,
        uint pathLength,
        uint enumerationId,
        FilePageCallback callback,
        nint context);

    [LibraryImport(Library,
        EntryPoint = "ZpNative_EnumerateFilteredFilesPage",
        StringMarshalling = StringMarshalling.Utf16)]
    internal static partial int EnumerateFilteredFilesPage(
        ulong clientId,
        string? path,
        uint pathLength,
        string? filter,
        uint filterLength,
        char group,
        uint enumerationId,
        FilePageCallback callback,
        nint context);

    [LibraryImport(Library, EntryPoint = "ZpNative_CloseFileEnumeration")]
    internal static partial int CloseFileEnumeration(
        ulong clientId,
        uint enumerationId,
        StatusCallback callback,
        nint context);

    [LibraryImport(Library,
        EntryPoint = "ZpNative_EnumerateArchivePage",
        StringMarshalling = StringMarshalling.Utf16)]
    internal static partial int EnumerateArchivePage(
        ulong clientId,
        string? path,
        uint pathLength,
        uint enumerationId,
        FilePageCallback callback,
        nint context);

    [LibraryImport(Library,
        EntryPoint = "ZpNative_QueryShortcut",
        StringMarshalling = StringMarshalling.Utf16)]
    internal static partial int QueryShortcut(
        ulong clientId,
        string path,
        uint pathLength,
        StringCallback callback,
        nint context);

    [LibraryImport(Library,
        EntryPoint = "ZpNative_PreviewImage",
        StringMarshalling = StringMarshalling.Utf16)]
    internal static partial int PreviewImage(
        ulong clientId,
        string path,
        uint pathLength,
        FileImagePreviewQuality quality,
        DataCallback callback,
        nint context);

    [LibraryImport(Library,
        EntryPoint = "ZpNative_QueryFile",
        StringMarshalling = StringMarshalling.Utf16)]
    internal static partial int QueryFile(
        ulong clientId,
        string path,
        uint pathLength,
        FileInfoCallback callback,
        nint context);

    [LibraryImport(Library,
        EntryPoint = "ZpNative_QueryFileSecurity",
        StringMarshalling = StringMarshalling.Utf16)]
    internal static partial int QueryFileSecurity(
        ulong clientId,
        string path,
        uint pathLength,
        SecurityDescriptorCallback callback,
        nint context);

    [LibraryImport(Library,
        EntryPoint = "ZpNative_SetFileSecurity",
        StringMarshalling = StringMarshalling.Utf16)]
    internal static partial int SetFileSecurity(
        ulong clientId,
        string path,
        uint pathLength,
        string sddl,
        uint sddlLength,
        [MarshalAs(UnmanagedType.U1)] bool daclProtected,
        StatusCallback callback,
        nint context);

    [LibraryImport(Library,
        EntryPoint = "ZpNative_ResolveAccountName",
        StringMarshalling = StringMarshalling.Utf16)]
    internal static partial int ResolveAccountName(
        ulong clientId,
        string name,
        uint nameLength,
        StringCallback callback,
        nint context);

    [LibraryImport(Library,
        EntryPoint = "ZpNative_ResolveAccountSid",
        StringMarshalling = StringMarshalling.Utf16)]
    internal static partial int ResolveAccountSid(
        ulong clientId,
        string sid,
        uint sidLength,
        StringCallback callback,
        nint context);

    [LibraryImport(Library,
        EntryPoint = "ZpNative_QueryFileVolume",
        StringMarshalling = StringMarshalling.Utf16)]
    internal static partial int QueryFileVolume(
        ulong clientId,
        string path,
        uint pathLength,
        FileVolumeCallback callback,
        nint context);

    [LibraryImport(Library,
        EntryPoint = "ZpNative_SetFileVolumeLabel",
        StringMarshalling = StringMarshalling.Utf16)]
    internal static partial int SetFileVolumeLabel(
        ulong clientId,
        string path,
        uint pathLength,
        string label,
        uint labelLength,
        StatusCallback callback,
        nint context);

    [LibraryImport(Library,
        EntryPoint = "ZpNative_HashFile",
        StringMarshalling = StringMarshalling.Utf16)]
    internal static partial int HashFile(
        ulong clientId,
        string path,
        uint pathLength,
        FileHashAlgorithm algorithm,
        FileHashCallback callback,
        nint context);

    [LibraryImport(Library,
        EntryPoint = "ZpNative_DeleteFile",
        StringMarshalling = StringMarshalling.Utf16)]
    internal static partial int DeleteFile(
        ulong clientId,
        string path,
        uint pathLength,
        StatusCallback callback,
        nint context);

    [LibraryImport(Library,
        EntryPoint = "ZpNative_RenameFile",
        StringMarshalling = StringMarshalling.Utf16)]
    internal static partial int RenameFile(
        ulong clientId,
        string path,
        uint pathLength,
        string newPath,
        uint newPathLength,
        StatusCallback callback,
        nint context);

    [LibraryImport(Library,
        EntryPoint = "ZpNative_SetFileAttributes",
        StringMarshalling = StringMarshalling.Utf16)]
    internal static partial int SetFileAttributes(
        ulong clientId,
        string path,
        uint pathLength,
        uint attributes,
        StatusCallback callback,
        nint context);

    [LibraryImport(Library,
        EntryPoint = "ZpNative_QueryFileOwners",
        StringMarshalling = StringMarshalling.Utf16)]
    internal static partial int QueryFileOwners(
        ulong clientId,
        string path,
        uint pathLength,
        FileOwnersCallback callback,
        nint context);

    [LibraryImport(Library,
        EntryPoint = "ZpNative_ControlFileOwners",
        StringMarshalling = StringMarshalling.Utf16)]
    internal static partial int ControlFileOwners(
        ulong clientId,
        string path,
        uint pathLength,
        FileOwnerControl control,
        nint processIds,
        uint processCount,
        FileOwnerControlCallback callback,
        nint context);
